<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_new">Add New</string>
    <string name="add_new_switch">Add New Switch</string>
    <string name="admob_app_id">ca-app-pub-7579070844628982~3101085496</string>
    <string name="app_name">Home Control Panel</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_delete">Are you sure, you want to delete</string>
    <string name="are_you_sure_you_want_to_disconnect">Are you sure you want to disconnect?</string>
    <string name="banner_ad_unit_id">ca-app-pub-7579070844628982/2405336526</string>
    <string name="bluetooth_not_support">Bluetooth not support</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_OFF">LED OFF</string>
    <string name="btn_ON">LED ON</string>
    <string name="bulb">Bulb</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="click_here">Click here</string>
    <string name="com.crashlytics.android.build_id">04c13ebd-efe0-4493-b542-503800a37ab4</string>
    <string name="command">Command</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_failed_is_it_a_spp_bluetooth_try_again">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="default_web_client_id">195749892636-lar77f1u7j01iqvi3kcjvps1h54dds7j.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_bluetooth">Disconnect Bluetooth</string>
    <string name="download_arduino_code">Download Arduino Code</string>
    <string name="edit">Edit</string>
    <string name="enter_any_number_from_1_to_12">Enter Any Number from 1 to 12</string>
    <string name="error">Error</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fan">Fan</string>
    <string name="file_storage_info">"File save in root storage as
arduino_bluetooth_code_and_circuit.zip"</string>
    <string name="firebase_database_url">https://home-control-panel-5f194.firebaseio.com</string>
    <string name="gcm_defaultSenderId">195749892636</string>
    <string name="google_api_key">AIzaSyApzTXTp0m6Koq79nv6mZ0DQH21o3YkroQ</string>
    <string name="google_app_id">1:195749892636:android:6ce9409b363c204a</string>
    <string name="google_crash_reporting_api_key">AIzaSyApzTXTp0m6Koq79nv6mZ0DQH21o3YkroQ</string>
    <string name="google_storage_bucket">home-control-panel-5f194.appspot.com</string>
    <string name="help">Help</string>
    <string name="help_guideline"><b>Introduction:</b>"
 This application featured to control home appliance with Bluetooth by sending simple command. There are guidelines to use of this application given below:

 "<b>How to use:</b>"
 "<b>1.</b>" Connect to HC-05/HC-06 Bluetooth module by entering 0000 or 1234 password during pairing.

 "<b>2.</b>" After connecting, add new switch by taping plus icon in toolbar of Home Screen.

 "<b>3.</b>" In Edit screen we can edit some details about switch in which there is an edit text in which command is to be enter, which is further sent to Arduino board after taping the on/off switch in Home screen.

 "<b>Note:</b>"
 There is no compulsion of entering command in uppercase or lowercase.

 "<b>"Download Sample Arduino code and circuit:
"</b>" "</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_much_switch_you_need">How much switch you need</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-7579070844628982/3069921596</string>
    <string name="loading">Loading</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="no">No</string>
    <string name="no_paired_bluetooth_devices_found">No Paired Bluetooth Devices Found.</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="others">Others</string>
    <string name="paired_device">Paired Device</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="please_enter_value_between_1_12">Please enter value between 1-12</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="please_select_any_of_the_appliance_type_above">Please select any of the appliance type above</string>
    <string name="please_tap_on_HC05_HC06_to_connect">Please tap on HC-05/HC-06 to connect</string>
    <string name="please_wait">Please wait!!!</string>
    <string name="press_button_to_add_new_switch">Press <b><font color="@color/colorBlack">+</font></b> button to add new switch</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="project_id">home-control-panel-5f194</string>
    <string name="reconnect">Reconnect</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="share">Share</string>
    <string name="speakers">Speakers</string>
    <string name="status">Status</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="status_off">Status: OFF</string>
    <string name="status_on">Status: ON</string>
    <string name="switch_already_in_list">already in list</string>
    <string name="switch_are_available">are available</string>
    <string name="switch_name">Switch Name</string>
    <string name="switch_off_all_the_appliance">Switch off all the appliance</string>
    <string name="tap_here_for_ading_new_switch">Tap here for adding new switch</string>
    <string name="tap_this_button_to_see_paired_device">"Tap this button to
see paired devices"</string>
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>