<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_download_arduino_code" android:title="@string/download_arduino_code" />
    <item android:id="@id/menu_help" android:title="@string/help" />
    <item android:id="@id/menu_disconnect" android:title="@string/disconnect" />
    <item android:id="@id/menu_reconnect" android:title="@string/reconnect" />
    <item android:icon="@drawable/ic_add_white_24dp" android:id="@id/menu_add" android:title="@string/add_new_switch" app:showAsAction="always" />
    <item android:id="@id/menu_share" android:title="@string/share" />
    <item android:id="@id/menu_privacy_policy" android:visible="false" android:title="@string/privacy_policy" />
</menu>